--- a/app.json
+++ b/app.json
@@ -1,36 +1,14 @@
 {
   "expo": {
-    "name": "TODO",
-    "slug": "toto",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.guillain.toto"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
+    "name": "My app",
+    "slug": "todo-master",
     "extra": {
       "eas": {
-        "projectId": "c8a14a42-24ee-43d0-9d94-58bcf83055e9"
+        "projectId": "9dc0b1b7-0321-4f55-b34c-1510fb61bdf9"
       }
+    },
+    "android": {
+      "package": "com.david_mugisho.todo-master"
     }
   }
 }
