--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "My app",
-    "slug": "todo-master",
+    "slug": "TODO-MASTER",
     "extra": {
       "eas": {
         "projectId": "9dc0b1b7-0321-4f55-b34c-1510fb61bdf9"
